; ModuleID = '/home/carl/AnghaBench/linux/net/can/j1939/extr_main.c_j1939_can_rx_unregister.c'
source_filename = "/home/carl/AnghaBench/linux/net/can/j1939/extr_main.c_j1939_can_rx_unregister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.j1939_priv = type { %struct.net_device* }
%struct.net_device = type { i32 }

@J1939_CAN_ID = common dso_local global i32 0, align 4
@J1939_CAN_MASK = common dso_local global i32 0, align 4
@j1939_can_recv = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.j1939_priv*)* @j1939_can_rx_unregister to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @j1939_can_rx_unregister(%struct.j1939_priv* %0) #0 {
  %2 = alloca %struct.j1939_priv*, align 8
  %3 = alloca %struct.net_device*, align 8
  store %struct.j1939_priv* %0, %struct.j1939_priv** %2, align 8
  %4 = load %struct.j1939_priv*, %struct.j1939_priv** %2, align 8
  %5 = getelementptr inbounds %struct.j1939_priv, %struct.j1939_priv* %4, i32 0, i32 0
  %6 = load %struct.net_device*, %struct.net_device** %5, align 8
  store %struct.net_device* %6, %struct.net_device** %3, align 8
  %7 = load %struct.net_device*, %struct.net_device** %3, align 8
  %8 = call i32 @dev_net(%struct.net_device* %7)
  %9 = load %struct.net_device*, %struct.net_device** %3, align 8
  %10 = load i32, i32* @J1939_CAN_ID, align 4
  %11 = load i32, i32* @J1939_CAN_MASK, align 4
  %12 = load i32, i32* @j1939_can_recv, align 4
  %13 = load %struct.j1939_priv*, %struct.j1939_priv** %2, align 8
  %14 = call i32 @can_rx_unregister(i32 %8, %struct.net_device* %9, i32 %10, i32 %11, i32 %12, %struct.j1939_priv* %13)
  %15 = load %struct.j1939_priv*, %struct.j1939_priv** %2, align 8
  %16 = call i32 @j1939_priv_put(%struct.j1939_priv* %15)
  ret void
}

declare dso_local i32 @can_rx_unregister(i32, %struct.net_device*, i32, i32, i32, %struct.j1939_priv*) #1

declare dso_local i32 @dev_net(%struct.net_device*) #1

declare dso_local i32 @j1939_priv_put(%struct.j1939_priv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
